--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -35,10 +35,10 @@
   /*Phone*/
   --fs-smaller: .75rem;
   --fs-small: .825rem;
-  --fs-normal: clamp(1rem, 2vw + .05rem, 1.15rem);
+  --fs-normal: clamp(.95rem, 2vw + .05rem, 1rem);
   --fs-h3: 1.2rem;
-  --fs-h2: clamp(1.5rem, 4vw + .05rem, 2.25rem);
-  --fs-h1: 2.5rem;
+  --fs-h2: clamp(1.5rem, 5vw + .05rem, 2.25rem);
+  --fs-h1: clamp(2.5rem, 8vw + .05rem, 4rem);
 
   /*PC*/
   /*--fs-smaller: .81rem;*/
@@ -60,7 +60,7 @@
   --z-tooltip: 10;
   --z-fixed: 50;
 
-  --header-height: clamp(3rem, 7vw, 4.5rem);
+  --header-height: clamp(4rem, 9vw, 5.5rem);
 }
 
 
@@ -73,7 +73,7 @@
 
 * {
   margin: 0;
-  font: inherit;
+  font-family: inherit;
 }
 
 a {
@@ -105,9 +105,30 @@ body {
   color: var(--clr-text-600);
 }
 
+.btn {
+  display: inline-block;
+  font: inherit;
+  color: #ffffff;
+  padding: 15px 20px;
+  background: var(--clr-primary-400);
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
 .container {
-  width: 95%;
+  max-width: min(95%, 1024px);
   margin: 0 auto;
+}
+
+h1 {
+  font-size: var(--fs-h1);
+  color: var(--clr-primary-400);
+}
+
+h2 {
+  font-size: var(--fs-h2);
+  color: var(--clr-header);
 }
 
 /*Icons*/
@@ -129,7 +150,7 @@ header {
 
 nav {
   font-weight: var(--fw-regular);
-  max-width: min(95%, 1024px);
+  /*max-width: min(95%, 1024px);*/
   height: var(--header-height);
   display: flex;
   justify-content: space-between;
@@ -183,5 +204,31 @@ nav a:hover {
 
   .menu-icon {
     display: initial;
+  }
+}
+
+
+/*Main*/
+main .container {
+  max-width: min(90%, 950px);
+}
+
+/*Home*/
+.home > div {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  place-items: center;
+  gap: 20px;
+  margin-top: calc(var(--header-height) + 20px);
+}
+
+.home h2 {
+  margin: var(--mg-3) 0;
+}
+
+@media screen and (max-width: 576px) {
+  .home > div {
+    grid-template-columns: 1fr;
+    justify-items: start;
   }
 }
