--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,7 +36,7 @@
   --fs-smaller: .75rem;
   --fs-small: .825rem;
   --fs-normal: clamp(.95rem, 2vw + .05rem, 1rem);
-  --fs-h3: clamp(1.2rem, 3vw + .05rem, 1.5rem);
+  --fs-h3: clamp(1.2rem, 3vw + .05rem, 1.35rem);
   --fs-h2: clamp(1.7rem, 5vw + .05rem, 2.25rem);
   --fs-h1: clamp(2.7rem, 8vw + .05rem, 4rem);
 
@@ -81,8 +81,7 @@ a {
   color: inherit;
 }
 
-img,
-svg {
+img {
   display: block;
   max-width: 100%;
   height: auto;
@@ -118,7 +117,7 @@ body {
 }
 
 .container {
-  max-width: min(95%, 1024px);
+  max-width: min(90%, 1024px);
   margin: 0 auto;
 }
 
@@ -129,6 +128,11 @@ h1 {
 
 h2 {
   font-size: var(--fs-h2);
+  color: var(--clr-header);
+}
+
+h3 {
+  font-size: var(--fs-h3);
   color: var(--clr-header);
 }
 
@@ -196,7 +200,7 @@ nav a:hover {
 
   .theme-icon {
     position: absolute;
-    right: 3rem;
+    right: 4rem;
     top: min(-2.6rem, -5.7vw);
   }
 
@@ -212,7 +216,15 @@ nav a:hover {
 
 /*Main*/
 main .container {
-  max-width: min(90%, 950px);
+  max-width: min(85%, 950px);
+  margin-top: calc(var(--header-height) + 20px);
+}
+
+main span {
+  display: block;
+  color: var(--clr-primary-400);
+  font-weight: var(--fw-regular);
+  margin-bottom: var(--mg-1);
 }
 
 /*Home*/
@@ -221,7 +233,6 @@ main .container {
   grid-template-columns: repeat(2, 1fr);
   place-items: center;
   gap: clamp(20px, 2vw, 35px);
-  margin-top: calc(var(--header-height) + 20px);
 }
 
 .home h2 {
@@ -246,14 +257,6 @@ main .container {
   grid-template-columns: repeat(2, 1fr);
   place-items: center;
   gap: clamp(50px, 7vw, 150px);
-  margin-top: calc(var(--header-height) + 20px);
-}
-
-.about span {
-  display: block;
-  color: var(--clr-primary-400);
-  font-weight: var(--fw-regular);
-  margin-bottom: var(--mg-1);
 }
 
 .about h2,
@@ -280,3 +283,33 @@ main .container {
     width: 300px;
   }
 }
+
+
+/*Services*/
+.services {
+  text-align: center;
+}
+
+.services h3 {
+  margin: var(--mg-2) 0 var(--mg-1);
+}
+
+.services svg {
+  display: inline-block;
+  fill: var(--clr-primary-400);
+  width: 64px;
+  height: 64px;
+}
+
+.services-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+  gap: clamp(20px, 3vw, 50px);
+  margin-top: var(--mg-6);
+}
+
+.service-card p {
+  padding: 0 var(--mg-2);
+}
+
+
