--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -365,3 +365,23 @@ main span {
     width: 100px;
   }
 }
+
+
+/*Contact Us*/
+.contact .container {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  place-items: center;
+  gap: clamp(20px, 2vw, 35px);
+}
+
+@media screen and (max-width: 576px) {
+  .contact .container {
+    text-align: center;
+    grid-template-columns: 1fr;
+  }
+
+  .contact-data p {
+    margin: var(--mg-3) 0;
+  }
+}
