--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -56,7 +56,7 @@ body.dark {
   --clr-body: hsl(60, 5.71%, 13.73%);
   --clr-text-500: hsl(var(--clr-text-500-hsl));
   --clr-title: hsl(var(--clr-title-hsl));
-  --clr-shadow: hsla(var(--clr-title-hsl), .5);
+  --clr-shadow: hsla(var(--clr-title-hsl), .2);
 }
 
 
@@ -194,6 +194,10 @@ nav {
   display: none;
 }
 
+.active {
+  color: var(--clr-primary-400);
+}
+
 @media screen and (max-width: 768px) {
   .nav-menu {
     flex-direction: column;
@@ -247,6 +251,13 @@ main span {
 
 .home h2 {
   margin: var(--d-3) 0;
+}
+
+.home img {
+  padding: var(--d-2);
+  background-color: var(--clr-card);
+  border-radius: 60% 20% / 20% 60%;
+  box-shadow: 0 0 5px var(--clr-shadow);
 }
 
 @media screen and (max-width: 576px) {
